--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@
   .button0 {
     display: none;
   }
+  .sidebar {
+    padding: 2%;
+  }
 }
 
 .sidebar ul li a {
@@ -41,6 +44,19 @@
   color: grey;
 }
 
+.scroll ul li a {
+  color: white;
+  transition: all 0.4s ease;
+}
+
+.scroll ul li {
+  list-style: none;
+}
+
+.scroll ul li a:hover {
+  color: gray;
+}
+
 @media only screen and (max-width: 766px) {
   .sidebar {
     display: none;
@@ -56,9 +72,20 @@
     aspect-ratio: 1 / 1;
     width: 100%;
   }
+  .konten {
+    padding: 10%;
+  }
 }
 @media only screen and (min-width: 576px) {
   .button0 {
     display: none;
   }
+}
+
+.konten {
+  padding: 6%;
+}
+
+.sub-konten {
+  padding: 50px;
 }
